--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -8,18 +8,24 @@ on:
 
 jobs:
   build:
-    permissions: write-all
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # 使用最新的Ubuntu操作系统
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
+    - name: Checkout code  # 步骤1：检出代码
+      uses: actions/checkout@v2  # 使用GitHub提供的checkout动作
+
+    - name: Set up Java  # 步骤2：设置Java环境
+      uses: actions/setup-java@v2
       with:
-        java-version: '11'
-        distribution: 'temurin'
-    - run: mvn --batch-mode --update-snapshots verify
-    - run: mkdir staging && cp target/*.jar staging
-    - uses: actions/upload-artifact@v3
+        java-version: '11'  # 使用Java 11版本，你可以根据项目的要求选择不同的版本
+
+    - name: Build project  # 步骤3：构建项目
+      run: |
+        javac -d target src/*.java  # 编译Java源文件到target目录
+        jar cvf myapp.jar -C target .  # 创建JAR文件
+
+    - name: Upload JAR  # 步骤4：上传JAR文件
+      uses: actions/upload-artifact@v2
       with:
-        name: Package
-        path: staging
+        name: myapp  # JAR文件的名称
+        path: myapp.jar  # JAR文件的路径，需要与上面创建的JAR文件名称一致
